Refactor(system): 清理预认证会话 allowlist